Customized portfolio cards, fixed bug with non-uniform height on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,31 @@ h2 {
     background-color: #dbdcde;
 }
 
+#portfolio .card-text {         /* Maintain uniform height across cards no matter how little content */
+    min-height: 120px;
+}
+
+#portfolio .card-title {
+    color: #1f7798;
+    font-size: 1.2rem;
+}
+
+#portfolio .btn-outline-secondary:hover {
+    background-color: #1f7798;
+}
+
 /* Contact Section */
 
 #contact {
     background-color: rgb(248, 248, 248);
+}
+
+/* Media Queries */
+/* Using same breakpoints as Bootstrap */
+
+@media screen and (min-width: 1200px) {
+    /* Remove card min height when no longer necessary */
+    #portfolio .card-text {
+        min-height: auto;
+    }
 }
